Small alignment fix

--- a/css/31310.css
+++ b/css/31310.css
@@ -107,6 +107,9 @@ em:hover del {
 #BGGameplay .Inner {
   padding-left: 50px;
 }
+#BGItems .Inner {
+  padding-left: 50px;
+}
 #BGHeroes .Inner {
   padding-left: 50px;
 }
